[tool.poetry]
name = "snstalker"
version = "0.1.0"
description = "Viewer for social networks with anonymous access"
authors = [""]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4"
Django = ">=5.0"
djangorestframework = ">=3.15"
django-environ = ">=0.12.0,<1.0"
psycopg = { version = "^3.2", extras = ["binary"] }
requests = "^2.31"
beautifulsoup4 = "^4.12"

[tool.poetry.group.future.dependencies]
django-ratelimit = ">=4.1"
prometheus-client = ">=0.20"
django-redis = ">=5.4"
celery = ">=5.4"
redis = ">=5.0"
httpx = { version = ">=0.27", extras = ["http2"] }
beautifulsoup4 = ">=4.12"
lxml = ">=5.2"
pydantic = ">=2.8"
gunicorn = ">=22.0"
uvicorn = ">=0.30"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-django = ">=4.8"
black = ">=24.0"
isort = ">=5.13"
mypy = ">=1.10"
ruff = ">=0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "insta_service.settings"
pythonpath = ["."]
addopts = "-q"
